moved challenge-fs javascript into a file and cleaned up homepage.html

--- a/css/motivate.css
+++ b/css/motivate.css
@@ -17,3 +17,7 @@ a:active {
 .icons {
 	font-size: 25px;
 }
+
+* {
+	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
+}
