--- a/css/progress.css
+++ b/css/progress.css
@@ -2,13 +2,14 @@
 	margin-right: 20px;
 }
 
-#bottom-nav {
-	margin-bottom: 10px;
-}
-
 #progress-box {
 	color: #31708f;
 	background-color: #d9edf7;
 	border-color: #bce8f1;
 	border-radius: 6px;
+}
+
+.prof-pic {
+	margin-top: 15px;
+	margin-left: 15px;
 }
