--- a/css/motivate.css
+++ b/css/motivate.css
@@ -21,3 +21,10 @@ a:active {
 * {
 	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
 }
+
+
+#adc
+{
+	height: 150px;
+
+}
