added submit button to search

--- a/css/update.css
+++ b/css/update.css
@@ -1,10 +1,10 @@
 .glyphicon {
-	margin-right: 5px;]
+	margin-right: 5px;
 }
 
 .prof-pic {
 	vertical-align: middle;
-	margin-left: 12px;
+	margin-left: 8px;
 }
 
 #text {
