--- a/css/splashpage.css
+++ b/css/splashpage.css
@@ -46,8 +46,8 @@ video {
 }
 
 #logo {
-    width: 440px;
-    margin-bottom:20px;
+    margin-top: 20px;
+    margin-bottom: 10px;
 }
 
 #login {
@@ -61,6 +61,6 @@ video {
 }
 
 .container-fluid {
-    
+
 }
 
