--- a/css/motivate.css
+++ b/css/motivate.css
@@ -35,7 +35,10 @@ a:active {
 .prof-pic {
 	width: 110px;
 	height: 110px;
-	border-radius: 4px;
+	border-radius: 65px;
+	border-width: 2px;
+	border-color: #ECEEE1;
+	border-style: solid;
 }
 
 #top-nav {
