--- a/css/challenge-friendsearch.css
+++ b/css/challenge-friendsearch.css
@@ -6,7 +6,9 @@
 }
 
 #search-box {
-	border-right-width:0;
+	width:100%;
+	height:50px;
+	margin-bottom: 15px;
 	box-shadow: none;
 }
 
@@ -20,4 +22,30 @@
 
 .nav-padding {
 	padding-top: 10px;
+}
+
+#challegnge-cont {
+	margin-top: 50px;
+}
+
+.button-size {
+	padding-top:15px;
+	padding-bottom:15px;
+	margin-bottom: 15px;
+	width: 100%;
+	height: 50px;
+	border: none;
+	background-color: #221E1F;
+}
+
+.button-size:hover {
+	background-color: #D8403A;
+}
+
+.text-left {
+	font-size: 25px;
+}
+
+.btn-lg {
+	background-color: #A8DACF;
 }
