--- a/css/challenge-friendsearch.css
+++ b/css/challenge-friendsearch.css
@@ -42,10 +42,12 @@
 	background-color: #D8403A;
 }
 
-.text-left {
-	font-size: 25px;
-}
-
 .btn-lg {
 	background-color: #A8DACF;
+}
+
+.list-group-item {
+	height:50px;
+	padding-top:15px;
+	padding-bottom:15px;
 }
