--- a/css/splashpage.css
+++ b/css/splashpage.css
@@ -64,7 +64,10 @@ video {
     border-color: #D8403A;    
 }
 
-.container-fluid {
-
+.text-left {
+    font-size:15px;
 }
 
+#motivate-descr {
+    width:100%;
+}
