--- a/css/motivate.css
+++ b/css/motivate.css
@@ -19,20 +19,17 @@ a:active {
 	color: #221E1F;
 }
 
-.navbar-fixed-bottom {
-	margin-bottom: 10px;
-}
 
 * {
 	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
 	color: #221E1F;
 }
 
-#adc
+/*#adc
 {
 	height: 150px;
 
-}
+}*/
 .prof-pic {
 	width: 110px;
 	height: 110px;
@@ -80,16 +77,27 @@ body {
 	width: 250px;
 	height: 50px;
 	border: none;
-	background-color: #221E1F;
-}
-
-.buttonsize:hover {
-	background-color: #D8403A;
 }
 
 .btn-label {
 	color: #ECEEE1;
 }
 
+.btn-selected {
+	background-color: #D8403A;
+	color: #ECEEE1;
+}
 
+.btn-blue {
+	background-color: #A8DACF;
+}
+
+.btn-blk {
+	background-color: #221E1F;
+	color: #ECEEE1;
+}
+
+.btn-blk:hover {
+	background-color: #D8403A;
+}
 
