made button fixes to progress.html

--- a/css/progress.css
+++ b/css/progress.css
@@ -3,9 +3,7 @@
 }
 
 #progress-box {
-	color: #31708f;
-	background-color: #d9edf7;
-	border-color: #bce8f1;
+	background-color: #A8DACF;
 	border-radius: 6px;
 }
 
@@ -17,4 +15,8 @@
 .input-group-addon {
 	background-color: #fff;
 	border-color: #fff;
+}
+
+.caret {
+	color: #ECEEE1;
 }
