--- a/css/motivate.css
+++ b/css/motivate.css
@@ -25,11 +25,6 @@ a:active {
 	color: #221E1F;
 }
 
-/*#adc
-{
-	height: 150px;
-
-}*/
 .prof-pic {
 	width: 110px;
 	height: 110px;
@@ -113,6 +108,11 @@ body {
 
 .btn-blk:hover {
 	background-color: #D8403A;
+	color: #ECEEE1;
+}
+
+.btn-blk:focus {
+	background-color: #221E1F;
 	color: #ECEEE1;
 }
 
