--- a/css/challenge-friendsearch.css
+++ b/css/challenge-friendsearch.css
@@ -34,11 +34,15 @@
 }
 
 .button-size:hover {
-	background-color: #D8403A;
+	background-color: #3E879E;
 }
 
 .list-group-item {
 	height:50px;
 	padding-top:15px;
 	padding-bottom:15px;
+}
+
+.btn-blk:hover {
+	background-color: #64C733;
 }
