--- a/css/motivate.css
+++ b/css/motivate.css
@@ -16,13 +16,13 @@ a:active {
 
 .icons {
 	font-size: 25px;
-	color: #221E1F;
+	color: #36302B;
 }
 
 
 * {
 	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-	color: #221E1F;
+	color: #36302B;
 }
 
 .prof-pic {
@@ -30,7 +30,7 @@ a:active {
 	height: 110px;
 	border-radius: 65px;
 	border-width: 2px;
-	border-color: #ECEEE1;
+	border-color: #F0F0F0;
 	border-style: solid;
 }
 
@@ -39,17 +39,18 @@ a:active {
 	padding-bottom: 15px;
 	margin-bottom: 0px;
 	vertical-align: middle;
-	background-color: #A8DACF;
+	background-color: #64C733;
+	border-radius: 0px;
 }
 
 .navbar-fixed-bottom {
-	background-color: #ECEEE1;
+	background-color: #F0F0F0;
 	border: none;	
 }
 
 .navbar-static-bottom {
 	margin-top: 30px;
-	background-color: #ECEEE1;
+	background-color: #F0F0F0;
 	border: none;	
 }
 
@@ -59,7 +60,7 @@ a:active {
 
 
 body {
-	background-color: #ECEEE1;
+	background-color: #F0F0F0;
 }
 
 .logo {
@@ -78,22 +79,22 @@ body {
 }
 
 .btn-label {
-	color: #ECEEE1;
+	color: #F0F0F0;
 }
 
 .btn-selected {
-	background-color: #D8403A;
-	color: #ECEEE1;
+	background-color: #64C733;
+	color: #F0F0F0;
 }
 
 .btn-selected:focus {
-	background-color: #D8403A;
-	color: #ECEEE1;
+	background-color: #64C733;
+	color: #F0F0F0;
 }
 
 .btn-selected:hover {
-	background-color: #D8403A;
-	color: #ECEEE1;
+	background-color: #64C733;
+	color: #F0F0F0;
 }
 
 .text-left {
@@ -101,24 +102,24 @@ body {
 }
 
 .btn-blue {
-	background-color: #A8DACF;
+	background-color: #3E879E;
 }
 
 .btn-blk {
-	background-color: #221E1F;
-	color: #ECEEE1;
+	background-color: #57524D;
+	color: #F0F0F0;
 }
 
 .btn-blk:hover {
-	background-color: #D8403A;
-	color: #ECEEE1;
+	background-color: #3E879E;
+	color: #F0F0F0;
 }
 
 .btn-blk:focus {
-	background-color: #221E1F;
-	color: #ECEEE1;
+	background-color: #3E879E;
+	color: #F0F0F0;
 }
 
 #white-text {
-	color: #ECEEE1;
+	color: #F0F0F0;
 }
