--- a/css/splashpage.css
+++ b/css/splashpage.css
@@ -1,21 +1,21 @@
 h1 {
-    color: #D8403A;
+    color: #8C1945;
     font-size: 50px;
 }
 
 h3 {
-    color: #D8403A;
+    color: #8C1945;
     font-size: 32px;
     text-align: center;
 }
 .icons {
     font-size: 32px;
-    color: #221E1F;
+    color: #595959;
 }
 
 body {
 
-    background-color: #ECEEE1;
+    background-color: #FFFFFF;
     width: 100%;
     height: 100%;
 }
@@ -29,7 +29,7 @@ body {
 }
 
 p {
-    color: #221E1F;
+    color: #595959;
     font-size: 20px;
 }
 
@@ -60,8 +60,8 @@ video {
     margin-bottom: 12px;
     margin-right: 15px;
     font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, "AppleGothic", sans-serif;
-    background-color: #D8403A;
-    border-color: #D8403A;    
+    background-color: #8C1945;
+    border-color: #8C1945;    
 }
 
 .text-left {
