quick color overhaul

--- a/css/adc.css
+++ b/css/adc.css
@@ -3,8 +3,8 @@
 }
 
 .btn-blk:focus {
-	background-color: #221E1F;
-	color: #ECEEE1;
+	background-color: #36302B;
+	color: #F0F0F0;
 }
 
 .btn-blk {
