--- a/css/stats.css
+++ b/css/stats.css
@@ -7,7 +7,7 @@
 }
 
 .stats-text {
-	color:#ECEEE1;
+	color:#F0F0F0;
 }
 
 #stats-table {
@@ -15,7 +15,7 @@
 }
 
 th {
-	color:#D8403A;
+	color:#64C733;
 }
 
 .vert-align {
