--- a/css/splashpage.css
+++ b/css/splashpage.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 h3 {
-    color: #D8403A;
+    color:#64c733;
     font-size: 32px;
     text-align: center;
 }
@@ -14,8 +14,6 @@ h3 {
 }
 
 body {
-
-    background-color: #ECEEE1;
     width: 100%;
     height: 100%;
 }
@@ -28,10 +26,6 @@ body {
     font-size: 2em;
 }
 
-p {
-    color: #221E1F;
-    font-size: 20px;
-}
 
 hr {
     display: block;
@@ -82,3 +76,18 @@ video {
     background-image:none;
 }
 
+.carousel-indicators .active{
+    background-color:#36302b;
+}
+
+.carousel-indicators li {
+    border-color:#36302b;
+}
+
+.carousel-control .icon-prev {
+    color:#36302b;
+}
+
+.carousel-control .icon-next {
+    color:#36302b;
+}
